--- a/resources/resources.qrc
+++ b/resources/resources.qrc
@@ -1,7 +1,9 @@
 <RCC>
   <qresource prefix="Resources">
-    <file>userlist.qss</file>
+    <file>accountabilityreports.qss</file>
     <file>usermanagement.qss</file>
+    <file>userlist.qss</file>
+    <file>taskmanagement.qss</file>
     <file>logo.png</file>
     <file>mainwindow.qss</file>
     <file>app.png</file>
