Alarm Sound Completed

--- a/alertwindow.ui
+++ b/alertwindow.ui
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
  <class>AlertWindow</class>
- <widget class="QWidget" name="AlertWindow">
+ <widget class="QDialog" name="AlertWindow">
   <property name="geometry">
    <rect>
     <x>0</x>
