--- a/resources/resources.qrc
+++ b/resources/resources.qrc
@@ -1,5 +1,6 @@
 <RCC>
   <qresource prefix="Resources">
+    <file>passwordreset.qss</file>
     <file>taskdialog.qss</file>
     <file>accountabilityreports.qss</file>
     <file>usermanagement.qss</file>
@@ -7,6 +8,7 @@
     <file>userlist.qss</file>
     <file>taskmanagement.qss</file>
     <file>mainwindow.qss</file>
+    <file>authwindow.qss</file>
     <file>down-arrow.png</file>
     <file>up-arrow.png</file>
     <file>checkbox-normal.png</file>
