--- a/resources/taskmanagement_light.qss
+++ b/resources/taskmanagement_light.qss
@@ -2,7 +2,7 @@
     background-color: #f5f5f5;   /* light background */
 }
 
-#btnPlus, #btnMinus {
+#btnPlus, #btnMinus, #btnAccess {
     padding: 10px 20px;
     font-size: 14px;
     border: none;
@@ -12,7 +12,7 @@
     font-family: 'Roboto';
 }
 
-#btnPlus:hover, #btnMinus:hover {
+#btnPlus:hover, #btnMinus:hover, #btnAccess:hover {
     background-color: #aa17e8;   /* purple hover */
     color: white;                /* ensure readability */
 }
