--- a/resources/usermanagement_light.qss
+++ b/resources/usermanagement_light.qss
@@ -11,7 +11,7 @@
     color: #222222;              /* dark text */
 }
 
-#btnPlus, #btnMinus {
+#btnPlus, #btnMinus, #btnAccess {
     padding: 10px 20px;
     font-size: 14px;
     border: none;
@@ -21,7 +21,7 @@
     font-family: 'Roboto';
 }
 
-#btnPlus:hover, #btnMinus:hover {
+#btnPlus:hover, #btnMinus:hover, #btnAccess:hover {
     background-color: #aa17e8;   /* keep purple accent */
     color: white;                /* contrast on hover */
 }
