--- a/taskmanagement.ui
+++ b/taskmanagement.ui
@@ -60,6 +60,13 @@
             </property>
            </widget>
           </item>
+          <item>
+           <widget class="QPushButton" name="btnAccess">
+            <property name="text">
+             <string>Enter Access</string>
+            </property>
+           </widget>
+          </item>
          </layout>
         </item>
         <item>
